--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -4,6 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "synth": "cdk synth",
+    "deploy": "cdk deploy",
+    "bootstrap": "cdk bootstrap"
+  },
   "dependencies": {
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.72.1-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.72.1-alpha.0",
