--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack",
+    "start": "webpack serve --mode development --config webpack.config.dev.js",
+    "build": "webpack --config webpack.config.dev.js",
+    "bundle": "webpack --config webpack.config.prod.js",
     "test": "echo \"No Tests yet\""
   },
   "devDependencies": {
