--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -5,23 +5,25 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"No Tests yet\"",
-    "start": "node dist/main.js",
-    "bundle": "rm -rf dist-lambda && mkdir dist-lambda && zip -qr dist-lambda/lambda.zip dist/ node_modules"
+    "build": "tsc -p tsconfig.build.json",
+    "test": "jest",
+    "start": "ts-node src/main.ts"
   },
   "devDependencies": {
-    "@types/aws-serverless-express": "^3.3.5",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
-    "eslint": "^8.37.0"
+    "@types/yup": "^0.32.0",
+    "eslint": "^8.37.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "@types/aws-lambda": "^8.10.114",
-    "aws-serverless-express": "^3.4.0",
+    "@types/jest": "^29.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "yup": "^1.0.2"
   }
 }
