--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -6,10 +6,13 @@
   "private": true,
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
+    "bundle": "rm -rf dist-lambda && mkdir dist-lambda && zip -qr dist-lambda/lambda.zip dist/ node_modules",
     "test": "jest",
     "start": "ts-node src/main.ts"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.114",
+    "@types/aws-serverless-express": "^3.3.5",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
@@ -17,13 +20,14 @@
     "eslint": "^8.37.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   },
   "dependencies": {
     "@types/jest": "^29.5.0",
+    "aws-serverless-express": "^3.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "typescript": "^5.0.3",
     "yup": "^1.0.2"
   }
 }
