--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "webpack serve --mode development --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.dev.js",
+    "bundle": "webpack --config webpack.config.prod.js",
     "test": "echo \"No Tests yet\""
   },
   "devDependencies": {
